--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
         <meta charset="UTF-8"> 
         <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta rel="stylesheet" src="styles.css">
+        <link rel="stylesheet" href="styles.css">
         <title>Landing Page</title>
     </head>
 
 
     <body>
-        <h1>lol</h1>
+        <div class="header">
+            <h1>Header logo</h1>
+            <ul>
+                <li> header link 1</li>
+                <li> header link 2</li>
+                <li> header link 3</li>
+            </ul>
+        </div>
+
+        
+
+
+
+
     </body>
 
 
