Update feactures in html and design in css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="introduction">
                 <div class="text">
                     <h1>This website is awesome</h1>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio, vero!</p>
+                    <p id="HeroText">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio, vero!</p>
                     <button>sign up</button>
                 </div>
                 <img src="https://via.placeholder.com/350x150">
@@ -51,12 +51,12 @@
                 </div>
 
             </div>
-            <div class="middel">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, ex!</p>
-                <p>Thor, god of thunder</p>
+            <div class="middle">
+                <p id="middle_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, ex!</p>
+                <p id="thor">Thor, god of thunder</p>
             </div>
             <div class="end">
-                <div>
+                <div class="end_text">
                     <h6>Call out it's time</h6>
                     <p>Sign up for our product by clicking the button right here</p>
                 </div>
